--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:d1_mini]
+lib_compat_mode = strict
 platform = espressif8266
 board = d1_mini
 framework = arduino
 upload_speed = 921600
+monitor_speed = 115200
+board_build.f_cpu = 80000000L
+board_build.filesystem = littlefs
+lib_deps = 
+	git@github.com:tzapu/WiFiManager.git#v2.0.10-beta
+	fastled/FastLED @ ^3.5.0
+	khoih-prog/AsyncHTTPRequest_Generic @ ^1.7.1
