--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,8 @@ lib_deps =
 	git@github.com:tzapu/WiFiManager.git#v2.0.10-beta
 	fastled/FastLED @ ^3.5.0
 	khoih-prog/AsyncHTTPRequest_Generic @ ^1.7.1
+lib_ignore = 
+	STM32AsyncTCP
+	STM32duino LwIP
+	STM32Ethernet
+	WebServer_WT32_ETH01
