upload settings and i18n

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,3 +26,8 @@ lib_ignore =
 	STM32duino LwIP
 	STM32Ethernet
 	WebServer_WT32_ETH01
+;extra_scripts = pre:pre_extra_script.py
+;upload_protocol = espota
+;upload_port = 192.168.178.32
+;upload_flags = 
+;    --auth=the_ota_password
