--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && npm run clean",
+    "clean": "rm -rf ../data/assets",
     "preview": "vite preview"
   },
   "dependencies": {
