update name of vmix-fake-tally

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,7 @@ lib_ignore =
 	STM32Ethernet
 	WebServer_WT32_ETH01
 ;extra_scripts = pre:pre_extra_script.py
-;upload_protocol = espota
-;upload_port = 192.168.178.32
-;upload_flags = 
-;    --auth=the_ota_password
+upload_protocol = espota
+upload_port = 192.168.178.47
+upload_flags = 
+    --auth=my_ota_password
