optimize build step

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,15 +1,10 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+[platformio]
+extra_configs = private_config.ini
+
+[env]
+lib_compat_mode = strict
 
 [env:d1_mini]
-lib_compat_mode = strict
 platform = espressif8266
 board = d1_mini
 framework = arduino
@@ -26,8 +21,11 @@ lib_ignore =
 	STM32duino LwIP
 	STM32Ethernet
 	WebServer_WT32_ETH01
-;extra_scripts = pre:pre_extra_script.py
+
+
+[env:ota]
+extends = env:d1_mini
 upload_protocol = espota
-upload_port = 192.168.178.47
+upload_port = ${env.my_ota_ip}
 upload_flags = 
-    --auth=my_ota_password
+    --auth=${env.my_ota_password}
